--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,11 +21,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Check code coverage
-      uses: themichaelhall/check-code-coverage@v2
-      with:
-        report: coverage.xml
-        required-percentage: 80
+    - name: Code coverage Report Action
+      uses: insightsengineering/coverage-action@v2.6.0
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
