--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,18 +10,14 @@ on:
     branches: [ "main" ]
 
 jobs:
-  checkstyle_job:
+  ecs:
+    name: Easy Coding Standard
     runs-on: ubuntu-latest
-    name: Checkstyle job
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Run check style
-      uses: nikitasavinov/checkstyle-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        reporter: 'github-pr-check'
-        tool_name: 'testtool'
+    - uses: actions/checkout@v2
+    - name: Easy Coding Standard Action
+      uses: zingimmick/ecs-action@0.0.4
+      
   build:
 
     runs-on: ubuntu-latest
